se agregan estilos a los botones

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -18,7 +18,7 @@
         android:id="@+id/btnCrearLibro"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:background="#ff71a2ff"
+        android:background="@drawable/btn_default"
         android:onClick="crearLibro"
         android:layout_marginTop="150dp" />
 
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="Listar libros"
         android:id="@+id/btnListadoLibros"
-        android:background="#ff71a2ff"
+        android:background="@drawable/btn_default"
         android:onClick="listadoLibros"
         android:layout_below="@+id/btnCrearLibro"
         android:layout_alignParentLeft="true"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:text="Agregar Autor"
         android:id="@+id/btnAutor"
-        android:background="#ff71a2ff"
+        android:background="@drawable/btn_default"
         android:layout_below="@+id/btnListadoLibros"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -49,7 +49,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Agregar Genero"
-        android:background="#ff71a2ff"
+        android:background="@drawable/btn_default"
         android:id="@+id/btnGenero"
         android:layout_below="@+id/btnAutor"
         android:layout_alignParentLeft="true"
@@ -60,7 +60,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Agregar Editorial"
-        android:background="#ff71a2ff"
+        android:background="@drawable/btn_default"
         android:id="@+id/btnEditorial"
         android:layout_below="@+id/btnGenero"
         android:layout_alignParentLeft="true"
